# roof-builder

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  apt_requirements.txt  build-and-run.sh  docker-compose.yml  py_requirements.txt  singconf.def  singularity-build.sh  singularity-run.sh  singularity-schedule.sh
config/: config.env  config_docker.env
src/: Building.cpp  Building.h  Geometry.h  Main.cpp  Program.cpp  Program.h  Timer.h
src/Dbscan/: Dbscan.cpp  Dbscan.h
src/Grid/: Grid.cpp  Grid.h
src/Readers/: CsvReader.cpp  CsvReader.h  NpyReader.cpp  NpyReader.h  Reader.h
src/Triangle/: TriangleWrap.cpp  TriangleWrap.h  triangle.c  triangle.h
src/Writers/: NpyWriter.h  StlWriter.h  StreamWriter.h
src/nanoflann/: nanoflann.hpp
src/py/: PyCaller.h  cv_pipeline_edge.py  cv_pipeline_ridge.py  lasToNpy.py
